# python-project-lvl1

./: .gitignore  Makefile  README.md  TODO.md  brain-games.py  pyproject.toml
brain_games/: .gitignore
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
