[tool.poetry]
name = "hexlet-code"
version = "0.0.1"
description = "brain_games"
authors = ["Evgeny Rachlenko <evgeny.rachlenko@gmail.com>"]
license = "Apache 2"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
flake8 = "^4.0.1"
black = "^21.9b0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
